--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
 
     <div class="start">
-    Initial Array: <input id = "initial" size="100" type = "text" value = "-10 10 -9 9 -8 8 -7 7 -6 6 -5 5 -4 4 -3 3 -2 2 -1 1 -0">
+    Initial Array: <input id = "initial" size="100" type = "text" value = "7,-9,6,-5,10,-8,5,-3,+0,-4,3,3.5,-7,-3,5,-2,1,-4,5,-2,3,-0,0.5,6.5,5.5,8.8">
     <button style="width:70px" id = "sort" onclick = "main()">Sort</button>
 	<br>
     <canvas id="FirstCanvas" height="0" class="Canvas"></canvas>
@@ -134,7 +134,7 @@
     function main () {
 
         {Array1=document.getElementById('initial').value;
-        Array1 = Array1.split(' ');
+        Array1 = Array1.split(',');
         for (var h = 0; h < Array1.length; h++) {
             Array1[h] = +Array1[h];
             if (isNaN(Array1[h])){
@@ -147,7 +147,7 @@
 		Display(Array1,"FirstCanvas");}//Prepare
 
         {var startArray1 = document.getElementById('initial').value;
-        startArray1 = startArray1.split(' ');
+        startArray1 = startArray1.split(',');
         for (var i = 0; i < startArray1.length; i++) {
             startArray1[i] = +startArray1[i];
             if (isNaN(startArray1[i])){
@@ -164,7 +164,7 @@
         }} //Start Bubble
 
         {var startArray3 = document.getElementById('initial').value;
-        startArray3 = startArray3.split(' ');
+        startArray3 = startArray3.split(',');
         for (var t = 0; t < startArray3.length; t++) {
             startArray3[t] = +startArray3[t];
             if (isNaN(startArray3[t])){
@@ -181,7 +181,7 @@
         }} //Start Insertion
 
         {var startArray2 = document.getElementById('initial').value;
-            startArray2 = startArray2.split(' ');
+            startArray2 = startArray2.split(',');
             for (var r = 0; r < startArray2.length; r++) {
                 startArray2[r] = +startArray2[r];
                 if (isNaN(startArray2[r])){
@@ -198,7 +198,7 @@
             }} //Start Select
 
         {var startArray4 = document.getElementById('initial').value;
-        startArray4 = startArray4.split(' ');
+        startArray4 = startArray4.split(',');
         for (var u = 0; u < startArray4.length; u++) {
             startArray4[u] = +startArray4[u];
             if (isNaN(startArray4[u])){
@@ -215,7 +215,7 @@
         }} //Start Shell
 
         {var startArray5 = document.getElementById('initial').value;
-        startArray5 = startArray5.split(' ');
+        startArray5 = startArray5.split(',');
         for (var p = 0; p < startArray5.length; p++) {
             startArray5[p] = +startArray5[p];
             if (isNaN(startArray5[p])){
