--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 		.Canvas{
 			margin-top:5px;
 			transform: scale(1,-1);
+            border-style: solid;
+            border-width: 1px;
+            border-color: gray;
 		}
     </style>
 </head>
@@ -34,7 +37,7 @@
 <body>
 
     <div class="start">
-    Initial Array: <input id = "initial" size="100" type = "text" value = "7,-9,6,-5,10,-8,5,-3,+0,-4,3,3.5,-7,-3,5,-2,1,-4,5,-2,3,-0,0.5,6.5,5.5,8.8">
+    Initial Array: <input id = "initial" size="100" type = "text" value = "7,-9,6,-5,10,-8,-3,+0,-4,3,3.5,-7,-3,5,-2,1,-4,5,-2,3,-0,0.5,6.5,5.5,8.8">
     <button style="width:70px" id = "sort" onclick = "main()">Sort</button>
 	<br>
     <canvas id="FirstCanvas" height="0" class="Canvas"></canvas>
@@ -114,12 +117,12 @@
                 document.getElementById('InsertionCanvas').height = ((max - min) * 5 + 6);
                 document.getElementById('ShellCanvas').height = ((max - min) * 5 + 6);
                 document.getElementById('QuickCanvas').height = ((max - min) * 5 + 6);
-                document.getElementById('FirstCanvas').width = n * 5+1;
-                document.getElementById('BubbleCanvas').width = n * 5+1;
-                document.getElementById('SelectCanvas').width = n * 5+1;
-                document.getElementById('InsertionCanvas').width = n * 5+1;
-                document.getElementById('ShellCanvas').width = n * 5+1;
-                document.getElementById('QuickCanvas').width = n * 5+1
+                document.getElementById('FirstCanvas').width = n * 5;
+                document.getElementById('BubbleCanvas').width = n * 5;
+                document.getElementById('SelectCanvas').width = n * 5;
+                document.getElementById('InsertionCanvas').width = n * 5;
+                document.getElementById('ShellCanvas').width = n * 5;
+                document.getElementById('QuickCanvas').width = n * 5
             }
 
             function speed(items) {
@@ -406,11 +409,11 @@
         var canvas = document.getElementById(ID);
         var ctx= canvas.getContext("2d");
         ctx.clearRect(0,0,4000,4000);
-        for (var x = 0.5; x < 4000; x += 5) {
+        for (var x = 0; x < 4000; x += 5) {
             ctx.moveTo(x, 0);
             ctx.lineTo(x, 4000);
         }
-        for (var y = 0.5; y < 4000; y += 5) {
+        for (var y = -2.5; y < 4000; y += 5) {
             ctx.moveTo(0, y);
             ctx.lineTo(4000, y);
         }
@@ -418,20 +421,18 @@
         ctx.stroke();
 		if (min<0) {
 			ctx.beginPath();
-			ctx.moveTo(0,Math.abs(min)*5+0.5);
-			ctx.lineTo(4000, Math.abs(min)*5+0.5);
-			ctx.lineWidth = 1.5;
+			ctx.moveTo(0,Math.abs(min)*5+2.5);
+			ctx.lineTo(4000, Math.abs(min)*5+2.5);
 			ctx.strokeStyle = "red";
 			ctx.stroke();
-			
-			ctx.lineWidth = 1;
 		}
         for (var i=0; i<items.length; i++) {
+
             if (min<0) {
-                ctx.fillRect(i*5, (items[i]*5)+Math.abs(min)*5, 5, 5)
+                ctx.fillRect(i*5, (items[i]*5)+Math.abs(min)*5, 4.5, 5)
 
             } else {
-                ctx.fillRect(i*5, (items[i]*5)-min*5, 5, 5)
+                ctx.fillRect(i*5, (items[i]*5)-min*5, 4.5, 5)
             }
         }
     }
